Fix erroneous title fields in title window and opening night post types; Fix h2 spacing in user-content; Adjust posts-per-page limiting number of posts visible under single exhibit

--- a/web/app/themes/typeforce/assets/styles/components/_user-content.scss
+++ b/web/app/themes/typeforce/assets/styles/components/_user-content.scss
@@ -39,4 +39,10 @@
     margin-top: 20px;
   }
 
+  h2 {
+    margin-top: 40px;
+    &:first-of-type {
+      margin-top: 0;
+    }
+  }
 }
